--- a/index.html
+++ b/index.html
@@ -37,16 +37,20 @@
 		<section class="container">
 			<div class="row">
 				<div class="col-md-3 col-sm-4 col-xs-12">
-					<p>Hola</p>
+					<h4>Subheading</h4>
+					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 				</div>
 				<div class="col-md-3 col-sm-4 col-xs-12">
-					<p>Hola</p>
+					<h4>Subheading</h4>
+					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 				</div>
 				<div class="col-md-3 col-sm-4 col-xs-12">
-					<p>Hola</p>
+					<h4>Subheading</h4>
+					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 				</div>
 				<div class="col-md-3 col-sm-4 col-xs-12">
-					<p>Hola</p>
+					<h4>Subheading</h4>
+					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 				</div>
 			</div>
 		</section>
