--- a/index.html
+++ b/index.html
@@ -8,54 +8,53 @@
 	  	<link href="css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container">
+		<div class="container col-md-offset-1 col-md-9">
 			<header class="clearfix header">
-			<nav class="row">
-				<div class="col-md-12">
-					<div class="col-md-6">
-						<h3 class="text-muted">Project Name</h3>
+				<nav class="row">
+					<div class="col-md-12">
+						<div class="col-md-6">
+							<h3 class="text-muted">Project Name</h3>
+						</div>
+						<ul class="nav nav-pills navbar-right">
+	  						<li role="presentation" class="active"><a href="#">Home</a></li>
+	  						<li role="presentation"><a href="#">Profile</a></li>
+	  						<li role="presentation"><a href="#">Messages</a></li>
+						</ul>
 					</div>
-					<ul class="nav nav-pills navbar-right">
-  						<li role="presentation" class="active"><a href="#">Home</a></li>
-  						<li role="presentation"><a href="#">Profile</a></li>
-  						<li role="presentation"><a href="#">Messages</a></li>
-					</ul>
-				</div>
-			</nav>
-		</header>
-		<section class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="jumbotron">
-						<h1>Jumbotron heading</h1>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-						<a href="#"><button class="btn btn-success btn-lg">Learn more</button></a>
+				</nav>
+			</header>
+			<hr>
+			<section class="container text-center  col-md-12">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="jumbotron">
+							<h1>Jumbotron heading</h1>
+							<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+							<a href="#"><button class="btn btn-success btn-lg">Learn more</button></a>
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section class="container">
-			<div class="row">
-				<div class="col-md-3 col-sm-4 col-xs-12">
-					<h4>Subheading</h4>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+			</section>
+			<section class="container">
+				<div class="row marketing">
+					<div class="col-lg-6 col-xs-12">
+						<h4>Subheading</h4>
+						<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+					</div>
+					<div class="col-lg-6 col-xs-12">
+						<h4>Subheading</h4>
+						<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+					</div>
+					<div class="col-lg-6 col-xs-12">
+						<h4>Subheading</h4>
+						<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+					</div>
+					<div class="col-lg-6 col-xs-12">
+						<h4>Subheading</h4>
+						<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+					</div>
 				</div>
-				<div class="col-md-3 col-sm-4 col-xs-12">
-					<h4>Subheading</h4>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-				</div>
-				<div class="col-md-3 col-sm-4 col-xs-12">
-					<h4>Subheading</h4>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-				</div>
-				<div class="col-md-3 col-sm-4 col-xs-12">
-					<h4>Subheading</h4>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-				</div>
-			</div>
-		</section>
-		
-
+			</section>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
